@@ -1,4 +1,4 @@
-.TH MD5DEEP "1" "v3.9.1 \- 31 May 2011" "AFOSI" "United States Air Force"
+.TH MD5DEEP "1" "v4.0 \- RBF DATE" "AFOSI" "United States Air Force"
 
 .SH NAME
 md5deep \- Compute and compare MD5 message digests
