@@ -1,4 +1,4 @@
-.TH MD5DEEP "1" "v3.9.1 \- 31 May 2011" "AFOSI" "United States Air Force"
+.TH MD5DEEP "1" "v4.0 \- RBF DATE" "AFOSI" "United States Air Force"
 
 .SH NAME
 md5deep \- Compute and compare MD5 message digests
@@ -17,8 +17,8 @@ whirlpooldeep \- Compute and compare Whirlpool message digests
 .br
 .B md5deep
 [\-m|\-M|\-x|\-X <file>]  [-a|-A <hash>] [\-f <file>]
-[\-p <size>] [\-i <size>] [\-tnwzresS0lbkqZud] [\-F<bum>] [\-o <fbcplsd>] 
-[\-jnn] [\fBFILES\fR]
+[\-p <size>] [\-i <size>] [\-tnwzresS0lbkqZud] [\-F<bum>] 
+[\-o <fbcplsd>]  [\-jnn] [[\fBFILES\fR]
 
 .SH DESCRIPTION
 .PP
@@ -229,7 +229,6 @@ non-deterministic order, as files that take longer to hash will be
 delayed while they are hashed. If a deterministic order is required,
 specify \fB-j0\fR to disable multi-threading
 
-
 .TP
 \fB-d\fR
 Output in Digital Forensics XML (DFXML) format.
@@ -247,7 +246,6 @@ Specifies the input mode that is used to read files. The default is
 open(). Specifying \fB-Fm\fR will use memory-mapped I/O which will be
 faster on some platforms, but which (currently) will not work with
 files that produce I/O errors.
-
 
 .TP
 \fB\-h\fR
@@ -270,7 +268,7 @@ the \fB-r\fR option.
 
 By default all program input and output
 should be in UTF-8.  The program automatically converts this to UTF-16
-for opening files).
+for opening files). 
 
 On Unix/Linux/MacOS, you should use a terminal emulator that supports
 UTF-8 and UTF-8 characters in filenames will be properly displayed.
@@ -284,7 +282,6 @@ Currently the file name of a file containing known hashes may not be
 specified as a unicode filename, but you can specify the name using
 tab completition or an asterisk (e.g. md5deep -m *.txt where there is
 only one file with a .txt extension).
-
 
 .SH RETURN VALUE
 Returns a bit-wise value based on the success of the operation and the
